<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtk_bringup</name>
  <version>0.0.0</version>
  <description>Bring up nodes to coordinate ublox rtk with ntrip correction source</description>
  <maintainer email="olivia.dharmadi@outlook.com">olivia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>ntrip_client</exec_depend>
  <exec_depend>fix2nmea</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
